<resources>
    <string name="app_name">iSMART</string>
    <string name="app_title">iSMART App</string>
    <string name="app_desc">Barcode Tracking System PTA</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_menu">MenuActvity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="ipaddress_host">IP Address/Host Name</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="download">Download App</string>
    <string name="datasync">Data Sync</string>
    <string name="indian_oil">Indian Oil</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>

    <string name="Enter_Valid_Captcha">Enter Valid Captcha!!</string>
    <string name="Please_Check_Userid_and_Password">Please Check Userid and Password!!</string>
    <string name="Please_Enter_Password">Please Enter Password.</string>
    <string name="Please_Enter_Correct_Password">Please Enter Correct Password !!</string>
    <string name="Network_Problem">Network Problem !!</string>
    <string name="Loading">Loading...</string>
    <string name="Singing_in">Signing in...</string>
    <string name="Processing">Processing ...</string>
    <string name="Mapping">Mapping ...</string>
    <string name="Wait">Wait ...</string>
    <string name="Press_again_to_exit">Press again to exit !!</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_putaway">Putaway</string>
    <string name="menu_dispatch">Dispatch</string>
    <string name="menu_bagsadjustment">Bags Adjustment</string>

    <string name="activity_intent_filter_action">com.dwbasicintent1.ACTION</string>
    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
</resources>