<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_putaway"
            android:icon="@drawable/ic_putaway"
            android:title="@string/menu_putaway" />
        <item
            android:id="@+id/nav_dispatch"
            android:icon="@drawable/ic_output"
            android:title="@string/menu_dispatch" />
        <item
            android:id="@+id/nav_bagsadjustment"
            android:icon="@drawable/ic_adjust"
            android:title="@string/menu_bagsadjustment" />
    </group>
</menu>