<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.mespl.ismartkotlin.pta.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_dispatch"
        android:name="com.mespl.ismartkotlin.pta.ui.dispatch.DIspatchFragment"
        android:label="@string/menu_dispatch"
        tools:layout="@layout/fragment_dispatch" />

    <fragment
        android:id="@+id/nav_putaway"
        android:name="com.mespl.ismartkotlin.pta.ui.putaway.PutawayFragment"
        android:label="@string/menu_putaway"
        tools:layout="@layout/fragment_putaway" />

    <fragment
        android:id="@+id/nav_bagsadjustment"
        android:name="com.mespl.ismartkotlin.pta.ui.bagsadjustment.BagsAdjustmentFragment"
        android:label="@string/menu_bagsadjustment"
        tools:layout="@layout/fragment_bagsadjustment" />
</navigation>